force-app/main/default/objects/custom_create159__c/custom_create159__c.object-meta.xml
<CustomObject>
    <label>Custom created object159</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects159</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>