force-app/main/default/objects/custom_create159__c/fields/custom_create_159field518__c.field-meta.xml
<CustomField>
    <fullName>custom_create_159field518__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 159field518</label>
    <type>Checkbox</type>
</CustomField>